<resources>
    <string name="app_name">FitnessApp</string>
    <string name="condicaoLeve">Sedentário</string>
    <string name="condicaoModerado">Praticante</string>
    <string name="condicaoAlta">Expert</string>
    <string name="tituloPerfil">PERFIL</string>
    <string name="tituloConfiguracoes">CONFIGURAÇÕES</string>
    <string name="tituloHistorico">HISTÓRICO</string>
    <string name="placeholderText">...</string>
    <string name="placeholderDate">././.</string>
    <string name="HistExercicios_txtConcluido">Concluido em :</string>
    <string name="avisoHistoricoVazio">Histórico Vazio</string>
    <string name="avisoConteudoVazio">Aviso de Lista de Exercícios Vazia</string>
    <string name="AppName">Tempo Saudável</string>
    <string name="tituloCadastro">CADASTRO</string>
    <string name="tituloLembretes">Lembretes</string>
    <string name="txtProjetoInfo">PROJETO POR</string>
    <string name="txtProjetoNomes">...</string>
    <string name="txtLembreteDate">Definido para as</string>
    <string name="lembreteRemove">REMOVER</string>
    <string name="tituloTreinos">Meus Treinos</string>
    <string name="tituloConteudo">CONTEÚDO</string>
    <string name="treinosAviso_completo">Treinos Completados</string>
    <string name="tituloAtividades">Minhas Atividades</string>
    <string name="hintNome">Nome</string>
    <string name="hintEmail">Email</string>
    <string name="hintSenha">Senha</string>
    <string name="hintConfirmSenha">Confime a Senha</string>
    <string name="hintSexoHomem">Homem</string>
    <string name="hintSexoMulher">Mulher</string>
    <string name="txtFreqExercicio">Frequência de Exercicios</string>
    <string name="txtDisponibilidade">Disponibilidade</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="txtfield_Required">Obrigatório*</string>
    <string name="names">Helena Rodriguez Tavares\nIsabelle Marie Miranda Nadas\nJulia Rodrigues Alves Mattos</string>
    <string name="placeholderconteudo">Ler mais...</string>
</resources>