<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_height="match_parent"
    android:layout_width="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloCadastro"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginVertical="30dp"
        android:textSize="25sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".Cadastro">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastroNome_inputLayout"
            style="@style/genericCampoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroNome"
                style="@style/genericCampoText.field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <include
            android:id="@+id/cadastroDate"
            layout="@layout/cadastro_date"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastroEmail_inputLayout"
            style="@style/genericCampoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroEmail"
                style="@style/genericCampoText.field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastroSenha_inputLayout"
            style="@style/genericCampoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSenha"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/p3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroSenha"
                style="@style/genericCampoText.field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cadastroSenhaConfirm_inputLayout"
            style="@style/genericCampoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintConfirmSenha"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/p3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cadastroSenhaConfirm"
                style="@style/genericCampoText.field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/cadastroSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Cadastro_distanciamento"
            android:checkedButton="@id/cadastroMasc"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cadastroMasc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hintSexoHomem"
                android:textColor="@color/p3" />

            <RadioButton
                android:id="@+id/cadastroFem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hintSexoMulher"
                android:textColor="@color/p3" />

        </RadioGroup>

        <TextView
            android:id="@+id/textFreqExerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/txtFreqExercicio"
            android:textSize="23sp" />

        <SeekBar
            android:id="@+id/sbarFreqExerc"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:progress="0"
            android:progressBackgroundTint="@color/p4" />

        <TextView
            android:id="@+id/textHelperFreqExerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/placeholderText"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/textDisponibilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/txtDisponibilidade"
            android:textSize="23sp" />

        <SeekBar
            android:id="@+id/sbarDisponibilidade"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="7"
            android:progress="0"
            android:progressBackgroundTint="@color/p4" />

        <TextView
            android:id="@+id/textHelperDisponibilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/placeholderText"

            android:textSize="20sp" />


        <include
            android:id="@+id/cadastroExercsRealizados"
            layout="@layout/cadastro_addspinner" />

        <include
            android:id="@+id/cadastroFoco"
            layout="@layout/cadastro_addspinner" />

        <include
            android:id="@+id/cadastroObjetivo"
            layout="@layout/cadastro_addspinner" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cadastroBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_padrao"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/background" />
    </LinearLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>