<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p2"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".Configuracoes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/tituloActivity"
            android:text="@string/tituloConfiguracoes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/tituloLembretes"
            android:textColor="@color/p3"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lembrete_btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_padrao"
            android:textColor="@color/white"
            android:paddingHorizontal="20dp"

            android:text="Definir novo Lembrete" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lembrete_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"

            android:gravity="center"
            android:textColor="@color/p3"
            android:text="@string/txtProjetoInfo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"

            android:textColor="@color/p3"
            android:gravity="center"
            android:text="@string/names" />
    </LinearLayout>


</LinearLayout>