<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p2"
    android:orientation="vertical"
    tools:context=".Principal">

    <include layout="@layout/principal_treinotrack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnPerfil"
            style="@style/textviewPrincipal"
            android:text="@string/tituloPerfil" />

        <TextView
            android:id="@+id/btnConfig"
            style="@style/textviewPrincipal"
            android:text="@string/tituloConfiguracoes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/Principal_progressBar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"

                android:layout_width="@dimen/Principal_dimenProgressbar"
                android:layout_height="@dimen/Principal_dimenProgressbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Principal_progressBar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <include
        android:id="@+id/principal_bottomnav"
        layout="@layout/principal_navbar" />

</LinearLayout>