<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="14dp"
    android:background="@color/p1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="430dp"
        android:layout_height="wrap_content"
        android:background="@color/p1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/p1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="20dp"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:id="@+id/Hist_rowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholderText"
                android:textSize="18sp"
                android:textColor="@color/background"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:text="@string/HistExercicios_txtConcluido"
                android:textColor="@color/background"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/Hist_rowDate"
                app:layout_constraintTop_toBottomOf="@+id/Hist_rowText" />

            <TextView
                android:id="@+id/Hist_rowDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderDate"
                android:textColor="@color/background"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Hist_rowText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>